[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/MainMenuBG_1024x600.png" type="Texture" id=2]
[ext_resource path="res://fonts/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/characters/Hammond.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 672.267
margin_top = 341.644
margin_right = 952.267
margin_bottom = 579.644
custom_constants/separation = 17
__meta__ = {
"_edit_group_": true
}

[node name="StageMode" type="Label" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 280.0
margin_bottom = 43.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stage Mode"
align = 1

[node name="Area2D" type="Area2D" parent="VBoxContainer/StageMode"]
editor/display_folded = true
visible = false
position = Vector2( 91.8096, 20.9772 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/StageMode/Area2D"]
shape = SubResource( 2 )

[node name="EndlessMode" type="Label" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 60.0
margin_right = 280.0
margin_bottom = 103.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "Endless Mode"
align = 1

[node name="Area2D" type="Area2D" parent="VBoxContainer/EndlessMode"]
editor/display_folded = true
visible = false
position = Vector2( 92.2998, 20.6734 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/EndlessMode/Area2D"]
shape = SubResource( 2 )

[node name="Unlock" type="Label" parent="VBoxContainer/EndlessMode"]
margin_left = 15.6376
margin_top = 37.5558
margin_right = 253.638
margin_bottom = 51.5558
text = "(Clear Stage Mode to unlock!)"
align = 1
valign = 2

[node name="Unlockables" type="Label" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 120.0
margin_right = 280.0
margin_bottom = 163.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "Unlockables"
align = 1

[node name="Area2D" type="Area2D" parent="VBoxContainer/Unlockables"]
editor/display_folded = true
visible = false
position = Vector2( 92.2998, 20.6734 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Unlockables/Area2D"]
shape = SubResource( 2 )

[node name="Unlock" type="Label" parent="VBoxContainer/Unlockables"]
margin_left = 17.1078
margin_top = 39.026
margin_right = 255.108
margin_bottom = 53.026
text = "(Clear Stage Mode to unlock!)"
align = 1
valign = 1

[node name="Quit" type="Label" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 180.0
margin_right = 280.0
margin_bottom = 223.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
align = 1

[node name="Area2D" type="Area2D" parent="VBoxContainer/Quit"]
visible = false
position = Vector2( 93.6823, 16.4569 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Quit/Area2D"]
shape = SubResource( 2 )

[node name="Hammond" parent="." instance=ExtResource( 4 )]
position = Vector2( 137.458, 360.054 )
state = "MENU"
[connection signal="mouse_exited" from="VBoxContainer/StageMode" to="." method="_on_Label_mouse_exited"]
[connection signal="mouse_exited" from="VBoxContainer/EndlessMode" to="." method="_on_Label_mouse_exited"]
[connection signal="mouse_exited" from="VBoxContainer/Unlockables" to="." method="_on_Label_mouse_exited"]
[connection signal="mouse_exited" from="VBoxContainer/Quit" to="." method="_on_Label_mouse_exited"]
